--- a/bank-manager-client/src/styles.scss
+++ b/bank-manager-client/src/styles.scss
@@ -1,26 +1,12 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$bank-manager-client-primary: mat.define-palette(mat.$indigo-palette);
-$bank-manager-client-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$bank-manager-client-primary: mat.define-palette(mat.$amber-palette);
+$bank-manager-client-accent: mat.define-palette(mat.$deep-orange-palette);
 
-// The warn palette is optional (defaults to red).
 $bank-manager-client-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$bank-manager-client-theme: mat.define-light-theme((
+$bank-manager-client-theme: mat.define-dark-theme((
   color: (
     primary: $bank-manager-client-primary,
     accent: $bank-manager-client-accent,
@@ -28,12 +14,21 @@ $bank-manager-client-theme: mat.define-light-theme((
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include mat.all-component-themes($bank-manager-client-theme);
 
-/* You can add global styles to this file, and also import other style files */
+$primary: #FFC107;
+$secondary: #FF5722;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import '~bootstrap/scss/bootstrap.scss';
+
+html, body, page-content { height: 100%; background-color: #ebf4fa;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+.xng-breadcrumb-root {
+  padding: 0 10% 40px;
+  display: inline-block;
+  border-radius: 4px;
+}
+.xng-breadcrumb-separator {
+  padding: 0 4px;
+}
