--- a/bank-manager-client/src/app/components/depenses/depenses.component.html
+++ b/bank-manager-client/src/app/components/depenses/depenses.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-4">
-            <app-categories-donut-chart></app-categories-donut-chart>
+            <app-categories-donut-chart [input]="refresh"></app-categories-donut-chart>
         </div>
         <div class="col-8">
-            <app-depenses-bar-chart></app-depenses-bar-chart>
+            <app-depenses-bar-chart [input]="refresh"></app-depenses-bar-chart>
         </div>
     </div>
     <div class="row">
@@ -16,7 +16,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Montant">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Montant </th>
-                    <td mat-cell *matCellDef="let row"> {{ row.montant }}</td>
+                    <td mat-cell *matCellDef="let row"> {{ row.montant }}€</td>
                 </ng-container>
                 <ng-container matColumnDef="Date">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
