You can now add a new depense

--- a/bank-manager-client/src/app/components/depenses/nouvelle-depense/nouvelle-depense.component.html
+++ b/bank-manager-client/src/app/components/depenses/nouvelle-depense/nouvelle-depense.component.html
@@ -1,7 +1,7 @@
 <div class="container border border-secondary">
     <div class="row">
-        <h2 class="text-secondary text-center">Déclarer la dépense n°375</h2>
-        <form class="w-75 mx-auto">
+        <h2 class="text-secondary text-center">Déclarer une nouvelle dépense</h2>
+
             <div class="row">
                 <div class="col-4">
                     <!-- DATEPICKER INLINE POUR LA SELECTION DE LA DATE DE LA DEPENSE -->
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-4">
                     <!-- CHAMP DE SELECTION DU MONTANT DE LA DEPENSE -->
-                    <input type="text" class="form-control my-4" placeholder="Montant de la dépense">
+                    <input type="text" class="form-control my-4" placeholder="Montant de la dépense" [formControl]="montantInput">
                     <!-- CHAMP DE SELECTION DU BENEFICIAIRE DE LA DEPENSE -->
                     <mat-form-field class="w-100 my-3">
                         <mat-label class="text-white">Bénéficiaire :</mat-label>
@@ -36,10 +36,10 @@
                 </div>
                 <div class="col-4">
                     <!-- CHAMP DE RENSEIGNEMENT DE LA DESCRIPTION DE LA DEPENSE -->
-                    <textarea class="form-control my-4" placeholder="Description de la dépense" style="height: 300px"></textarea>
-                    <button type="submit" class="btn btn-secondary w-100 mb-3">Créer la dépense</button>
+                    <textarea class="form-control my-4" placeholder="Description de la dépense" style="height: 300px" [formControl]="descriptionArea"></textarea>
+                    <button class="btn btn-secondary w-100 mb-3" (click)="create()">Créer la dépense</button>
                 </div>
             </div>
-        </form>
+
     </div>
 </div>
