--- a/bank-manager-client/src/app/components/depenses/depenses.component.html
+++ b/bank-manager-client/src/app/components/depenses/depenses.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-8">
             <mat-form-field appearance="outline" class="w-100 border-primary">
-                <mat-label>Select the year (default = current)</mat-label>
+                <mat-label>Select the year :</mat-label>
                 <mat-select class="text-primary" [formControl]="YearSelect" (selectionChange)="changeYear()">
                     <mat-option [value]="2021">2021</mat-option>
                     <mat-option [value]="2022">2022</mat-option>
@@ -15,10 +15,10 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <app-categories-donut-chart [input]="refresh" [year]="selectedYear"></app-categories-donut-chart>
+            <app-categories-donut-chart [year]="selectedYear"></app-categories-donut-chart>
         </div>
         <div class="col-8">
-            <app-depenses-bar-chart [input]="refresh" [year]="selectedYear"></app-depenses-bar-chart>
+            <app-depenses-bar-chart [year]="selectedYear"></app-depenses-bar-chart>
         </div>
     </div>
     <div class="row">
