Adding beneficiaire page with display of the total money spent

--- a/bank-manager-client/src/app/app.component.html
+++ b/bank-manager-client/src/app/app.component.html
@@ -4,6 +4,9 @@
       <a href="/" class="menu-sidenav-item mx-0">         <li class="menu-sidenav-item text-center text-primary mx-5"> <mat-icon>home</mat-icon>            &nbsp; Accueil      </li></a><mat-divider class="my-3"></mat-divider>
       <a href="/depenses" class="menu-sidenav-item mx-0"> <li class="menu-sidenav-item text-center text-primary mx-5"> <mat-icon>credit_card</mat-icon>     &nbsp; Dépenses</li></a><mat-divider class="my-3"></mat-divider>
       <a href="/revenus" class="menu-sidenav-item mx-0">  <li class="menu-sidenav-item text-center text-primary mx-5"> <mat-icon>monetization_on</mat-icon> &nbsp; Revenus </li></a><mat-divider class="my-3"></mat-divider>
+      <a href="/categories" class="menu-sidenav-item mx-0">  <li class="menu-sidenav-item text-center text-primary mx-5"> <mat-icon>donut_small</mat-icon> &nbsp; Catégories </li></a><mat-divider class="my-3"></mat-divider>
+      <a href="/crediteurs" class="menu-sidenav-item mx-0">  <li class="menu-sidenav-item text-center text-primary mx-5"> <mat-icon>beach_access</mat-icon> &nbsp; Créditeurs </li></a><mat-divider class="my-3"></mat-divider>
+      <a href="/beneficiaires" class="menu-sidenav-item mx-0">  <li class="menu-sidenav-item text-center text-primary mx-5"> <mat-icon>meeting_room</mat-icon> &nbsp; Bénéficiaires </li></a><mat-divider class="my-3"></mat-divider>
     </ul>
   </mat-drawer>
 
