--- a/bank-manager-client/src/app/components/beneficiaires/beneficiaires.component.html
+++ b/bank-manager-client/src/app/components/beneficiaires/beneficiaires.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="row my-5">
+        <app-beneficiaire-donut-chart [input]="refresh"></app-beneficiaire-donut-chart>
+    </div>
     <div class="row">
         <div class="mat-elevation-z8">
             <table mat-table class="col-12" [dataSource]="dataSource" matSort>
@@ -12,7 +15,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Montant">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Montant </th>
-                    <td mat-cell *matCellDef="let row"> {{ row.TOTAL }}€</td>
+                    <td mat-cell *matCellDef="let row"> {{ row.TOTAL }} €</td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
