--- a/bank-manager-client/src/app/components/beneficiaires/beneficiaires.component.html
+++ b/bank-manager-client/src/app/components/beneficiaires/beneficiaires.component.html
@@ -1,4 +1,14 @@
 <div class="container">
+    <div class="row my-3">
+        <div class="col-2"></div>
+        <div class="col-4">
+            <input type="text" class="form-control" placeholder="Nom du bénéficiaire" [formControl]="nomBeneficiaire">
+        </div>
+        <div class="col-4">
+            <button class="btn btn-outline-success w-100" (click)="create()">Nouveau bénéficiaire</button>
+        </div>
+        <div class="col-2"></div>
+    </div>
     <div class="row my-5">
         <app-beneficiaire-donut-chart [input]="refresh"></app-beneficiaire-donut-chart>
     </div>
