--- a/bank-manager-client/src/app/components/crypto/crypto.component.html
+++ b/bank-manager-client/src/app/components/crypto/crypto.component.html
@@ -10,6 +10,8 @@
                                 <div class="col">
                                     <h5 class="card-title text-uppercase text-muted mb-0">{{ cryptoAccounts[0].name }}</h5>
                                     <span class="h2 font-weight-bold mb-0">{{ cryptoAccounts[0].value }}</span>
+                                    <br/>
+                                    <span class="h4 mb-0">Somme investie : {{ cryptoAccounts[0].spendings }}</span>
                                 </div>
                                 <div class="col-auto">
                                     <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -31,6 +33,8 @@
                                 <div class="col">
                                     <h5 class="card-title text-uppercase text-muted mb-0">{{ cryptoAccounts[1].name }}</h5>
                                     <span class="h2 font-weight-bold mb-0">{{ cryptoAccounts[1].value }}</span>
+                                    <br/>
+                                    <span class="h4 mb-0">Somme investie : {{ cryptoAccounts[1].spendings }}</span>
                                 </div>
                                 <div class="col-auto">
                                     <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -52,6 +56,8 @@
                                 <div class="col">
                                     <h5 class="card-title text-uppercase text-muted mb-0">{{ cryptoAccounts[2].name }}</h5>
                                     <span class="h2 font-weight-bold mb-0">{{ cryptoAccounts[2].value }}</span>
+                                    <br/>
+                                    <span class="h4 mb-0">Somme investie : {{ cryptoAccounts[2].spendings }}</span>
                                 </div>
                                 <div class="col-auto">
                                     <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
@@ -73,6 +79,8 @@
                                 <div class="col">
                                     <h5 class="card-title text-uppercase text-muted mb-0">{{ cryptoAccounts[3].name }}</h5>
                                     <span class="h2 font-weight-bold mb-0">{{ cryptoAccounts[3].value }}</span>
+                                    <br/>
+                                    <span class="h4 mb-0">Somme investie : {{ cryptoAccounts[3].spendings }}</span>
                                 </div>
                                 <div class="col-auto">
                                     <div class="icon icon-shape bg-info text-white rounded-circle shadow">
