--- a/bank-manager-client/src/app/components/revenus/revenus.component.html
+++ b/bank-manager-client/src/app/components/revenus/revenus.component.html
@@ -16,15 +16,15 @@
                 </ng-container>
                 <ng-container matColumnDef="Montant">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Montant </th>
-                    <td mat-cell *matCellDef="let row"> {{ row.montant }}€</td>
+                    <td mat-cell *matCellDef="let row"> {{ row.Montant }}€</td>
                 </ng-container>
                 <ng-container matColumnDef="Date">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
                     <td mat-cell *matCellDef="let row"> {{ row.Date }} </td>
                 </ng-container>
-                <ng-container matColumnDef="Beneficiaire">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Bénéficiaire </th>
-                    <td mat-cell *matCellDef="let row"> {{ row.Beneficiaire }} </td>
+                <ng-container matColumnDef="Crediteur">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Crediteur </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.Crediteur }} </td>
                 </ng-container>
                 <ng-container matColumnDef="Categorie">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Catégorie </th>
