"Obligatoire" is now selected by default

--- a/bank-manager-client/src/app/components/depenses/nouvelle-depense/nouvelle-depense.component.html
+++ b/bank-manager-client/src/app/components/depenses/nouvelle-depense/nouvelle-depense.component.html
@@ -29,8 +29,8 @@
                     <!-- CHAMP DE SELECTION OBLIGATOIRE OU NON DE LA DEPENSE -->
                     <mat-form-field class="w-100 my-3">
                         <mat-label class="text-white">Obligatoire :</mat-label>
-                        <mat-select class="text-primary" [formControl]="obligatoireList">
-                            <mat-option *ngFor="let obli of ['Obligatoire', 'Facultative']" [value]="obli">{{obli}}</mat-option>
+                        <mat-select class="text-primary" [formControl]="obligatoireList" [(ngModel)]="oblisel">
+                            <mat-option *ngFor="let obli of ['Obligatoire', 'Facultative']" [value]="obli">{{ obli }}</mat-option>
                         </mat-select>
                     </mat-form-field>
                 </div>
