Weekly Sunday upload

--- a/bank-manager-client/src/app/components/accueil/accueil.component.html
+++ b/bank-manager-client/src/app/components/accueil/accueil.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="card" style="background-color: inherit">
                 <div class="card-header">
                     <h2 class="card-title">
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-lg-8 col-md-8  col-sm-12 col-xs-12">
             <app-resume-bar-chart [year]="selectedYear"></app-resume-bar-chart>
         </div>
     </div>
