--- a/bank-manager-client/src/app/components/depenses/categoriesDetails/categoriesDetails.component.html
+++ b/bank-manager-client/src/app/components/depenses/categoriesDetails/categoriesDetails.component.html
@@ -1,5 +1,8 @@
 <div class="container-fluid">
     <div class="row">
+        <h2>Montant moyen dépensé dans cette catégorie par mois :</h2>
+    </div>
+    <div class="row">
         <div class="mat-elevation-z8">
             <table mat-table class="col-12" [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="ID">
