--- a/bank-manager-client/src/app/components/depenses/depenses.component.html
+++ b/bank-manager-client/src/app/components/depenses/depenses.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="row my-3">
-        <div class="col-4">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a href="../depenses/new"><button class="btn btn-outline-success w-100">Nouvelle dépense</button></a>
         </div>
-        <div class="col-8">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
             <mat-form-field appearance="outline" class="w-100 border-primary">
                 <mat-label>Select the year :</mat-label>
                 <mat-select class="text-primary" [formControl]="YearSelect" (selectionChange)="changeYear()">
@@ -14,10 +14,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <app-categories-donut-chart [year]="selectedYear"></app-categories-donut-chart>
         </div>
-        <div class="col-8">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
             <app-depenses-bar-chart [year]="selectedYear"></app-depenses-bar-chart>
         </div>
     </div>
@@ -48,6 +48,10 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
                     <td mat-cell *matCellDef="let row"> {{ row.Description }} </td>
                 </ng-container>
+                <ng-container matColumnDef="Obligatoire">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center"> Obligatoire </th>
+                    <td mat-cell *matCellDef="let row"> <mat-checkbox [disableRipple]="true" (click)="$event.preventDefault()" style="cursor: unset"></mat-checkbox> </td>
+                </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -55,7 +59,7 @@
             <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
                 <mat-progress-spinner color="primary" mode="indeterminate"></mat-progress-spinner>
             </div>
-            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100, 500]" aria-label="Select page of users"></mat-paginator>
         </div>
     </div>
 </div>
