--- a/bank-manager-client/src/app/components/depenses/categoriesDetails/categoriesDetails.component.html
+++ b/bank-manager-client/src/app/components/depenses/categoriesDetails/categoriesDetails.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <h2>Montant moyen dépensé dans cette catégorie par mois :</h2>
+        <h2>Montant moyen dépensé dans cette catégorie par mois : {{ avgByMonth }} €</h2>
     </div>
     <div class="row">
         <div class="mat-elevation-z8">
