--- a/bank-manager-client/src/app/components/depenses/depenses.component.html
+++ b/bank-manager-client/src/app/components/depenses/depenses.component.html
@@ -50,7 +50,7 @@
                 </ng-container>
                 <ng-container matColumnDef="Obligatoire">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-center"> Obligatoire </th>
-                    <td mat-cell *matCellDef="let row"> <mat-checkbox [disableRipple]="true" (click)="$event.preventDefault()" style="cursor: unset"></mat-checkbox> </td>
+                    <td mat-cell *matCellDef="let row"> <mat-checkbox [disableRipple]="true" (click)="$event.preventDefault()" style="cursor: unset" [checked]="row.Obligatoire"></mat-checkbox> </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
